dts:sar: add channel name of ch3&ch4
aw9610x:
ch3&ch4 should be set after channel_num is set to 0x5

Change-Id: Ifd72682a893d82967f40ad7b0e24dfee938e9efb
Signed-off-by: zhangh12 <zhangh12@motorola.com>
Reviewed-on: https://gerrit.mot.com/2272203
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -189,9 +189,11 @@
 		sar-num = <0>;
 		aw9610x,channel_number = <0x5>;
 		ref_channel = <0x6>;
-		ch0_name = "capsense_bottom_left";
-		ch1_name = "capsense_top";
-		ch2_name = "capsense_bottom_right";
+		ch0_name = "Moto CapSense Ch0";
+		ch1_name = "Moto CapSense Ch1";
+		ch2_name = "Moto CapSense Ch2";
+		ch3_name = "Moto CapSense Ch3";
+		ch4_name = "Moto CapSense Ch4";
 		aw9610x,using-firmware;
                 aw9610x,firmware_name = "aw9610x_0";
 		status = "okay";
