Tesla: improve camera memory usage.
[details]
reduce vHDR's memory usage.
It would save about 30M for normal preview.
60M for portrait mode.

Change-Id: Ibb9e72bdadea268054e949005c08561153e6df16
Signed-off-by: huangdra <huangdra@motorola.com>
Reviewed-on: https://gerrit.mot.com/2272372
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: <wangyc27@mt.com>
Reviewed-by: Lei Wang <wangl67@motorola.com>
Reviewed-by: Zhuoran Xu <xuzr3@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Xu Ji <jixu@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit 30bd11044d3dc3e093eab8afc90566a8ea8f8d77)

--- a/drivers/media/platform/mtk-isp/Kconfig
+++ b/drivers/media/platform/mtk-isp/Kconfig
@@ -75,3 +75,9 @@ config VIDEO_MTK_ISP_IPESYS
 	    which process the images to generate useful statistics
 	    for isp pipeline image computation such
 	    as motion estimation.
+
+config MTK_MEMORY_OPTIMIZE
+	tristate "Moto memory optimize"
+	help
+	    Tesla do not support vHDR
+	    reduce unnecessary memory usage
