--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -138,7 +138,29 @@
                 pinctrl-5 = <&wt6670_pins_i2c>;
         };
 };
+&i2c7 {
+	clock-frequency = <100000>;
+        wt6670f@35 {
+                status = "okay";
+                compatible = "mediatek,wt6670f_qc3p";
+                reg = <0x35>;
+                wt6670f-reset-gpio = <&pio 106 0x0>;
+                wt6670f-int-gpio = <&pio 49 0x0>;
+                wt6670f-i2c-scl-pin = <&pio 142 0x0>;
+                wt6670f-i2c-sda-pin = <&pio 143 0x0>;
 
+                pinctrl-names = "default",
+                                "wt6670_i2c_scl_low", "wt6670_i2c_scl_high",
+                                "wt6670_i2c_sda_low", "wt6670_i2c_sda_high",
+                                "wt6670_i2c";
+                pinctrl-0 = <&wt6670_pins_default>;
+                pinctrl-1 = <&wt6670_pins_scl_low>;
+                pinctrl-2 = <&wt6670_pins_scl_high>;
+                pinctrl-3 = <&wt6670_pins_sda_low>;
+                pinctrl-4 = <&wt6670_pins_sda_high>;
+                pinctrl-5 = <&wt6670_pins_i2c>;
+        };
+};
 &pio {
         wt6670_pins_default: wt6670_default_mode {
         };
