--- a/arch/arm64/boot/dts/mediatek/mt6855.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855.dts
@@ -8793,3 +8793,5 @@ cpuqos_mode,dnth0,dnth1,upth0,upth1";
 #include "mediatek/mt6855-disable-unused.dtsi"
 #include "mediatek/bat_setting/mt6855_battery_prop.dtsi"
 #include "mediatek/trusty.dtsi"
+/* Motorola base dts override */
+#include "mediatek/mt6855-moto-base.dtsi"
