arm/dts:updata charger parameter
1.update charger current parameter
2.modify boot_battery_voltage && fast_charger_voltage

Change-Id: Ibbc6ad932b040fae72df4897b8e70427a13f89fb
Reviewed-on: https://gerrit.mot.com/2273580
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -28,7 +28,18 @@
                 mmi,adc-channel-batid = <3>;
                 mmi,adc-channel-vbat = <100>;
 };
+&lk_charger{
+    usb_charger_current = <500000>;
+    ac_charger_current = <1500000>;
+    ac_charger_input_current = <1500000>;
+    non_std_ac_charger_current = <1000000>;
+    charging_host_input_current = <1500000>;
+    charging_host_charger_current = <1000000>;
 
+    boot_battery_voltage = <3600000>;
+    fast_charge_voltage = <3000000>;
+    temp_t4_threshold = <60>;
+};
 &charger {
         /* common */
         battery_cv = <4464000>;
