devonn: add camera config
camera:
add camera config

Change-Id: If1e286c5a42914961b3cebc778f4855811d878f4
Signed-off-by: huangsh4 <huangsh4@mt.com>
Reviewed-on: https://gerrit.mot.com/2273609
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Xu Ji <jixu@motorola.com>
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: Lihui Chen <chenlh4@mt.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -14,4 +14,4 @@
 # being set as expected.
 #
 
-
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
