--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-devonn.config
@@ -15,4 +15,4 @@
 #
 #add for svp
 
-
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
