--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -115,6 +115,78 @@
         };
 };
 
+&i2c6 {
+	sgm41543d_charger: sgm41543d@0B {
+                status = "okay";
+                compatible = "sgm,sgm41543D";
+                reg = <0x0B>;
+                interrupt-parent = <&pio>;
+                interrupts = <4 0>;            //irq num base on hardware design
+                sgm,irq-gpio = <&pio 4 0>;     //irq num base on hardware design
+                sgm,chg-en-gpio = <&pio 64 0>;   //gpio num base on hardware design  1.MTK parent node name is pio  2.QUALCOMM parent node name is tlmm or other
+
+                chg_name = "primary_chg";
+                input-voltage-limit-microvolt = <4700000>;
+
+                /* sw jeita  parameter customer defined*/
+                enable_sw_jeita;
+                jeita_temp_above_t4_cv = <0>;
+                jeita_temp_t3_to_t4_cv = <4100000>;
+                jeita_temp_t2_to_t3_cv = <4350000>;
+                jeita_temp_t1_to_t2_cv = <4350000>;
+                jeita_temp_t0_to_t1_cv = <0>;
+                jeita_temp_below_t0_cv = <0>;
+
+                jeita_temp_above_t4_cc_current = <0>;
+                jeita_temp_t3_to_t4_cc_current = <1000000>;
+                jeita_temp_t2_to_t3_cc_current = <1250000>;
+                jeita_temp_t1_to_t2_cc_current = <1000000>;
+                jeita_temp_below_t0_cc_current = <0>;
+
+                temp_t4_thres = <50>;
+                temp_t4_thres_minus_x_degree = <48>;
+                temp_t3_thres = <45>;
+                temp_t3_thres_minus_x_degree = <45>;
+                temp_t2_thres = <20>;
+                temp_t2_thres_plus_x_degree = <15>;
+                temp_t1_thres = <0>;
+                temp_t1_thres_plus_x_degree = <0>;
+                temp_t0_thres = <0>;
+                temp_t0_thres_plus_x_degree = <2>;
+                temp_neg_10_thres = <0>;
+                bc12_sel = <&mtk_ctd>;
+                boot_mode = <&chosen>;
+                phys = <&u2port0 PHY_TYPE_USB2>;
+                phy-names = "usb2-phy";
+                usb = <&usb>;
+                sgm41543d_otg_vbus: otg {
+                        regulator-compatible = "sgm4154x,otg-vbus";
+                        regulator-name = "usb-otg-vbus";
+                        regulator-min-microvolt = <4850000>;
+                        regulator-max-microvolt = <5300000>;
+                        regulator-min-microamp = <1000000>;
+                        regulator-max-microamp = <2200000>;
+                };
+	};
+};
+
+&mtk_gauge {
+        charger_2nd = <&sgm41543d_charger>;
+};
+
+&extcon_usb {
+        charger_2nd = <&sgm41543d_charger>;
+};
+
+&charger {
+        vbus-supply-2nd = <&sgm41543d_otg_vbus>;
+        charger_2nd = <&sgm41543d_charger>;
+};
+
+&mtk_ctd {
+        bc12_2nd = <&sgm41543d_charger>;
+};
+
 &odm {
 	mmi_chrg_manager {
 		compatible = "mmi,chrg-manager";
