arm/dts:odify usb phy parameter
modify usb parameter

Change-Id: Idb856a10e0b593c33bab3690cf7f9adeee856479
Reviewed-on: https://gerrit.mot.com/2276132
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zonghua Liu <a17671@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -107,6 +107,11 @@
 	};
 };
 
+&u2port0 {
+    mediatek,eye-vrt = <7>;
+    mediatek,eye-term = <7>;
+    mediatek,rev6 = <2>;
+};
 
 &i2c6 {
 	spk: speaker_amp@5c {
