Vbus voltage using platform VCDT pin
1.read vbus voltage using platform VCDT pin
2.add config MOTO_CHARGER_SGM4154x
3.add sgm charger set vreg api
4.add sgm hiz and power path

Change-Id: Id2adf21c05140b8a3dde4f4289a604c0e30ef815
Reviewed-on: https://gerrit.mot.com/2276169
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Lei Chen <chenl18@motorola.com>
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -727,6 +727,12 @@ config CHARGER_RT9455
 	help
 	  Say Y to enable support for Richtek RT9455 battery charger.
 
+config MOTO_CHARGER_SGM415XX
+        bool "Enable SGM415xx charger IC for Moto"
+        default n
+        help
+          This is to enable MOTO supports of IC SGM415xx.
+
 config MOTO_CHG_WT6670F_SUPPORT
         bool "Enable WT6670F charger protocol IC for Moto"
         default n
