--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -64,6 +64,7 @@ CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
 CONFIG_WT6670F_QC3P=m
 CONFIG_MOTO_CHG_WT6670F_SUPPORT=y
+CONFIG_MOTO_CHARGER_SGM415XX=y
 # Add swtp customization
 CONFIG_MOTO_TESLA_SWTP_CUST=y
 
