--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -14,4 +14,61 @@
 # being set as expected.
 #
 
+# CONFIG_DRM_PANEL_TRULY_TD4330_VDO is not set
+# CONFIG_DRM_PANEL_TRULY_TD4330_CMD is not set
+# CONFIG_DRM_PANEL_TRULY_FT8756_VDO is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO is not set
+# CONFIG_DRM_PANEL_SC_NT36672C_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ is not set
+# CONFIG_DRM_PANEL_TIANMA_NT36672E_VDO_120HZ_HFP is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_CPHY_VDO is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_60HZ is not set
+# CONFIG_DRM_PANEL_SAMSUNG_S68FC01_VDO_AOD is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ_HFP is not set
+# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ_HFP is not set
+# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD is not set
+# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD_120HZ is not set
+# CONFIG_DRM_PANEL_TRULY_NT35595_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
+# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
+# CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ is not set
+CONFIG_DRM_PANEL_CSOT_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
+CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
+CONFIG_OF_GPIO=y
+#enable zram writeback
+CONFIG_ZRAM_WRITEBACK=y
+#add for i2c tool
+CONFIG_I2C_CHARDEV=y
+CONFIG_MOTO_WL2864C=m
+CONFIG_MTK_VIDEO_AW36515=m
 CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
+CONFIG_MTK_FLASHLIGHT_AW36518=m
+CONFIG_HQ_CAMERA_LDO=m
+# CONFIG_RT4831A_I2C is not set
+CONFIG_SND_SMARTPA_AW883XX=m
+CONFIG_SND_SMARTPA_AW883XX_I2S3=y
+# CONFIG_SND_SMARTPA_AW882XX is not set
+# CONFIG_SND_I2S1 is not set
+CONFIG_TYPEC_FSA4480=m
+CONFIG_MOTO_WLC_ALG_SUPPORT=m
+CONFIG_MOTO_CHG_TCMD_SUPPORT=m
+#add for svp
+CONFIG_TRUSTONIC_TEE_SUPPORT=m
+CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
+CONFIG_MTK_ENABLE_GENIEZONE=m
+CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
+CONFIG_MTK_TEE_GP_SUPPORT=y
+CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+CONFIG_WT6670F_QC3P=m
+CONFIG_MOTO_CHG_WT6670F_SUPPORT=y
+# Add swtp customization
+CONFIG_MOTO_TESLA_SWTP_CUST=y
+
+CONFIG_MICRON_UFSHID=y
+# CONFIG_UFSTW is not set
+CONFIG_SCSI_SKHID=y
+# CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ is not set
+
