vicky: sk5kgm1 bring up[1/5]
detail:
sk5kgm1 bring up

Change-Id: Ida5bd95ca5f9860c373e2f927d1468c58cd85c65
Signed-off-by: kankan5 <kankan5@motorola.com>
Reviewed-on: https://gerrit.mot.com/2278257
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: XiaoFeng Wang <wangxf32@mt.com>
Reviewed-by: <hansx3@motorola.com>
Reviewed-by: Zhuoran Xu <xuzr3@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789_vicky_camera_overlay.dtsi
@@ -290,11 +290,13 @@
 	//cam2_pin_vcama1 = "regulator";
 	cam1_pin_mipi_switch_sel = "gpio";
 	cam2_pin_mipi_switch_sel = "gpio";
+
 	cam4_pin_mclk = "mclk";
 	cam4_pin_rst = "gpio";
 	cam4_pin_vcama = "wl2868";
 	cam4_pin_vcamio = "wl2868";
-	cam0_enable_sensor = "mot_vicky_s5khm6_mipi_raw";
+	cam0_enable_sensor = "mot_vicky_s5khm6_mipi_raw mot_vicky_s5kgm1_mipi_raw";
+
 	cam1_enable_sensor = "mot_vicky_hi1634q_mipi_raw";
 	cam2_enable_sensor = "mot_vicky_s5k4h7_mipi_raw";
 	cam4_enable_sensor = "mot_vicky_ov02b10_mipi_raw";
