--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-vicky.config
@@ -20,7 +20,7 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_s5kgm1_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
 CONFIG_MTK_FLASHLIGHT_AW36518=m
 CONFIG_HQ_CAMERA_LDO=m
 
