--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -44,7 +44,7 @@ CONFIG_ZRAM_WRITEBACK=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
 CONFIG_MTK_VIDEO_AW36515=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_vicky_s5khm6_mipi_raw mot_vicky_s5kgm1_mipi_raw mot_vicky_hi1634q_mipi_raw mot_vicky_s5k4h7_mipi_raw mot_vicky_ov02b10_mipi_raw"
 CONFIG_MTK_FLASHLIGHT_AW36518=m
 CONFIG_HQ_CAMERA_LDO=m
 # CONFIG_RT4831A_I2C is not set
