--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -505,9 +505,24 @@
 
 &thermal_zones {
 	chg_ntc: chg_ntc {
-		polling-delay = <0>; /* milliseconds */
-		polling-delay-passive = <0>; /* milliseconds */
+		polling-delay = <10000>; /* milliseconds */
+		polling-delay-passive = <5000>; /* milliseconds */
 		thermal-sensors = <&tboard_thermistor4>;
+
+		trips {
+			wlctx_trip0: wlctx-trip0 {
+				temperature = <48000>;
+				hysteresis = <2000>;
+				type = "passive";
+			};
+		};
+
+		cooling-maps {
+			wlctx-cdev0 {
+				trip = <&wlctx_trip0>;
+				cooling-device = <&cps_wls_charger_l 1 1>;
+			};
+		};
 	};
 	quiet_ntc: quiet_ntc {
 		polling-delay = <0>; /* milliseconds */
