dts: audio: add India 48M SKU for DVT1.
For DVT1, the smartPA i2C addr is from 0x35->0x37
Radio of 4

Change-Id: Ie8c2eb7681006bbf4de011e1d69cb2356b80afb7
Signed-off-by: hq102 <hq102@motorola.com>
Signed-off-by: zhangh12 <zhangh12@motorola.com>
Signed-off-by: hq102 <hq102@motorola.com>
Signed-off-by: zhangh12 <zhangh12@motorola.com>
Reviewed-on: https://gerrit.mot.com/2284931
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-dvt1-india-48-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-dvt1-india-48-overlay.dts
@@ -14,17 +14,20 @@
 /plugin/;
 
 #include "mediatek/mt6789-vicky-common-overlay.dtsi"
-#include "mediatek/mt6789-vicky-audio-overlay.dtsi"
+
+#define VICKY_RADIO_IND48M 4
+
 /* Board match root node */
 / {
 	fragment@model {
 		target-path = "/";
 		__overlay__ {
 			mot,model = "vicky";
-			mot,board-id = <0x41 0xA100>;
+			mot,board-id = <(VICKY_RADIO_IND48M << 8 | 0x41) 0xB100>;
 		};
 	};
 };
 
 #include <vicky_evb/cust.dtsi>
+#include "mediatek/mt6789-vicky-audio-india-48-overlay.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
