--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-dvt1-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-dvt1-overlay.dts
@@ -14,17 +14,18 @@
 /plugin/;
 
 #include "mediatek/mt6789-vicky-common-overlay.dtsi"
-#include "mediatek/mt6789-vicky-audio-overlay.dtsi"
+
 /* Board match root node */
 / {
 	fragment@model {
 		target-path = "/";
 		__overlay__ {
 			mot,model = "vicky";
-			mot,board-id = <0x41 0xA100>;
+			mot,board-id = <0x41 0xB100>;
 		};
 	};
 };
 
 #include <vicky_evb/cust.dtsi>
+#include "mediatek/mt6789-vicky-audio-overlay.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
