--- a/sound/soc/codecs/aw883xx/Makefile
+++ b/sound/soc/codecs/aw883xx/Makefile
@@ -1,9 +1,9 @@
 snd-soc-aw883xx-objs += aw883xx.o
-snd-soc-aw883xx-objs += aw_monitor.o
-snd-soc-aw883xx-objs += aw_bin_parse.o
-snd-soc-aw883xx-objs += aw_device.o
-snd-soc-aw883xx-objs += aw_init.o
-snd-soc-aw883xx-objs += aw_calib.o
-snd-soc-aw883xx-objs += aw_spin.o
+snd-soc-aw883xx-objs += aw883xx_monitor.o
+snd-soc-aw883xx-objs += aw883xx_bin_parse.o
+snd-soc-aw883xx-objs += aw883xx_device.o
+snd-soc-aw883xx-objs += aw883xx_init.o
+snd-soc-aw883xx-objs += aw883xx_calib.o
+snd-soc-aw883xx-objs += aw883xx_spin.o
 
 obj-$(CONFIG_SND_SMARTPA_AW883XX) += snd-soc-aw883xx.o
