--- a/arch/arm64/boot/dts/mediatek/mt6855.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6855.dts
@@ -1981,6 +1981,7 @@
 	/* Trustonic Mobicore SW IRQ number 156 = 32 + 124 */
 	mobicore: mobicore {
 		compatible = "trustonic,mobicore";
+		trustonic,real-drv = <1>;
 		interrupts = <GIC_SPI 124 IRQ_TYPE_EDGE_RISING 0>;
 	};
 
