arch/arm64: Disable FSCRYPT V2 wrapped key until it's ready.
This is to disable the V2 wrapped key mode to unblock the initial bringup
process as currently the TEE is not fully enabled yet.

Change-Id: I56343bf6cb3f0135fe1e3d0d8057c8fd1c2a987d
Signed-off-by: quebs2 <quebs2@motorola.com>
Reviewed-on: https://gerrit.mot.com/2285274
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jianlin Nie <niejl1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -71,4 +71,4 @@ CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
 CONFIG_SCSI_SKHID=y
 # CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ is not set
-
+# CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT is not set
