thermal config battery current[1/2]
desp:
    thermal config battery current

Change-Id: I127adf476b400640cc7088b5dee14bbd1ef3e80e
Reviewed-on: https://gerrit.mot.com/2285690
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Reviewed-by: <hq104@motorola.com>
Tested-by: Jira Key
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -1185,3 +1185,8 @@
 			thermal-sensors = <&tboard_thermistor5>;
 		};
 };
+
+&charger_cooler {
+        mmi,thermal-mitigation = <(-1) 5000000 4000000 3000000 2500000
+                                2000000 1500000 1000000 500000>;
+};
