Vicky: camera ldo i2c3 compatible
Root Cause: ldo i2c address conflict
Modify Methods:  add camera ldo to i2c3
Test Requirements:1.build ok 2.config ok 3.test by hardware

Change-Id: Ib3907a14dade199dd79768f1ded1196be510ec06
Reviewed-on: https://gerrit.mot.com/2287132
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: <hansx3@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-vicky-common-overlay.dtsi
@@ -261,6 +261,16 @@
 };
 
 &i2c3 {
+       i2c_camera_ldo3{
+	       compatible = "mediatek,i2c_camera_ldo3";
+	       reg = <0x35>;
+	       status = "okay";
+       };
+       i2c_camera_ldo4{
+	       compatible = "mediatek,i2c_camera_ldo4";
+	       reg = <0x2f>;
+	       status = "okay";
+       };
        nfc_pn5xx: nfc_pn5xx@28 {
 		compatible = "nxp,pn5xx";
 		reg = <0x28>;
