kernel: Devonn: Add dummy panel
Before bringup the panel, we must dd dummy panel for devonn.
That andorid can work normally.

Change-Id: Id119791539d7fac8fd0284452e037ec0320de691
Reviewed-on: https://gerrit.mot.com/2287162
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -72,3 +72,5 @@ CONFIG_MICRON_UFSHID=y
 CONFIG_SCSI_SKHID=y
 # CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ is not set
 # CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT is not set
+
+CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
