arm64/dts: config sd card
conig sd card interrupt and power to bring up
sd card function.

Change-Id: I536b1ef6db6f217d0a40ba12abe6e7b2a6488d06
Reviewed-on: https://gerrit.mot.com/2288112
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -11,6 +11,7 @@
  */
 
 #include "mediatek/mt6855-moto-common-overlay.dtsi"
+#include <dt-bindings/gpio/gpio.h>
 
 &mtk_leds {
 
@@ -226,6 +227,11 @@
 
 &pdc {
 	pd_vbus_upper_bound = <12000000>;
+};
+
+&mmc1 {
+	cd-gpios = <&pio 14 GPIO_ACTIVE_HIGH>;
+	vmmc-supply = <&mt6369_vmch>;
 };
 
 //#include <k6855v1_64/cust.dtsi>
