arm/dts Modify for ffc/charger full (1/2)
Modify for ffc/charger full 

Change-Id: If426a0b9906d50ad869560179085ac44554b3b72
Signed-off-by: hq_liudong_tmp <liudong@huaqin.com>
Reviewed-on: https://gerrit.mot.com/2288974
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lei Chen <chenl18@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -59,16 +59,25 @@
         apple_2_1a_charger_current = <800000>;
         ta_ac_charger_current = <2000000>;
         typec_limit_aicr = <2000000>;
-
+	mmi,vfloat-comp-uv = <16000>;
         //mmi config
         mmi,iterm-ma = <243>;
 	mmi,mmi-temp-zones = <0  4200 1000 0>,
 			<10 4250 3000 1000>,
 			<15 4450 3000 0>,
-			<25 4480 5800 4000>,
-			<35 4480 5800 4000>,
-			<45 4480 5800 4000>,
+			<25 0 5800 4000>,
+			<35 0 5800 4000>,
+			<45 0 5800 4000>,
 			<60 4200 4000 0>;
+
+	mmi,mmi-ffc-zones = <0 4200 243>,
+			<10 4250 243>,
+			<15 4450 243>,
+			<25 4480 575>,
+			<35 4480 635>,
+			<45 4480 661>,
+			<60 4200 243>;
+
         mmi,enable-charging-limit;
         mmi,upper-limit-capacity = <65>;
         mmi,lower-limit-capacity = <60>;
@@ -203,11 +212,11 @@
 	/* Pseudo percentage */
 	g_FG_PSEUDO100 = <
 		/*bat1,   bat2,   bat3,    bat4*/
-		97   97  97  97/*T0*/
-		97   97  97  97/*T1*/
-		97   97  97  97/*T2*/
-		97   97  97  97/*T3*/
-		97   97  97  97/*T4*/
+		93   93  93  93/*T0*/
+		93   93  93  93/*T1*/
+		93   93  93  93/*T2*/
+		93   93  93  93/*T3*/
+		93   93  93  93/*T4*/
 		100 100 100 100/*T5*/
 		100 100 100 100/*T6*/
 		100 100 100 100/*T7*/
