--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-devonn.config
@@ -62,8 +62,8 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
-CONFIG_WT6670F_QC3P=m
-CONFIG_MOTO_CHG_WT6670F_SUPPORT=y
+# CONFIG_WT6670F_QC3P is not set
+# CONFIG_MOTO_CHG_WT6670F_SUPPORT is not set
 # Add swtp customization
 CONFIG_MOTO_TESLA_SWTP_CUST=y
 
