tesla/sensor: change channels for vzw sku
  1.vzw sku use 4 channels,rm ch2
  2.mt6879-tesla-xxx-vzw-overlay.dts

Change-Id: Ib0356fa8f17951829b8ec91d9db69c7f4736ea4a
Signed-off-by: weimh1 <weimh1@mt.com>
Reviewed-on: https://gerrit.mot.com/2289632
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key
(cherry picked from commit b5ce342be09ca3304f92edcdb5e56de9dff41c0d)

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-evt2-vzw-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-evt2-vzw-overlay.dts
@@ -29,6 +29,10 @@
 	};
 };
 
+&sx937x {
+	Semtech,button-flag = <0x1b>;
+};
+
 #include <tesla_evt2/cust.dtsi>
 #include "mediatek/cust_mt6879_camera_v4l2_tesla_evt.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
