--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-dvt1-vzw-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-dvt1-vzw-overlay.dts
@@ -29,6 +29,10 @@
 	};
 };
 
+&sx937x {
+	Semtech,button-flag = <0x1b>;
+};
+
 #include <tesla_dvt1/cust.dtsi>
 #include "mediatek/cust_mt6879_camera_v4l2_tesla.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
