--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -852,6 +852,15 @@ config DRM_PANEL_MOT_DUMMY_VDO_60HZ
 	  Say Y here if you want to enable support for DRM_PANEL_MOT_DUMMY_VDO_60HZ
 	  panel. It provides a MIPI DSI interface to host.
 
+config DRM_PANEL_TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ
+	tristate "TIANMA 1080*2400 120 HZ VDO icnl9922 panel"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for TIANMA_ICNL9922_649_FHDP_DPHY_VDO_120HZ
+	  panel. It provides a MIPI DSI interface to host.
+
 config DRM_MEDIATEK_PANEL
 	tristate "drm panel common driver"
 	depends on OF
@@ -863,5 +872,6 @@ config DRM_MEDIATEK_PANEL
 	  support CMD and VDO mode, support high frame rate.
 	  and uses 24-bits RGB per pixel. It provides a MIPI DSI interface
 	  to host.
+
 
 endmenu
