arm64/dts: optimize min charGing current
optimize min charGing current to 1.5A and typec middle
current to 800mA.

Change-Id: Ifc7e3f9b0f8f6b03493ee0a7771571cda38b4036
Signed-off-by: Lei Chen <chenlei18@mt.com>
Reviewed-on: https://gerrit.mot.com/2290823
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Xu <xuwei9@mt.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6789-moto-vicky-charger.dtsi
@@ -42,7 +42,7 @@
 };
 &charger {
         /* common */
-        battery_cv = <4480000>;
+        battery_cv = <4450000>;
         max_charger_voltage = <12000000>;
         min_charger_voltage = <4600000>;
 
@@ -263,7 +263,7 @@
 		mmi,batt-curr-boost = <300000>;
 		mmi,batt-ovp-lmt = <4550000>;
 		mmi,pl-chrg-vbatt-min = <3600000>;
-		mmi,typec-middle-current = <1000000>;
+		mmi,typec-middle-current = <800000>;
 		mmi,step-first-current-comp = <0>;
 		mmi,dont-rerun-aicl;
 		mmi,chrg-temp-zones-num = <5>;
@@ -282,7 +282,7 @@
 				<4480 661>,
 				<4200 243>;
 
-		mmi,thermal-min-level = <1000000>;
+		mmi,thermal-min-level = <1500000>;
 		charger_device_0 {
 			chrg-name = "pmic-sw";
 			psy-name = "battery";
@@ -291,7 +291,7 @@
 		charger_device_1 {
 			chrg-name = "cp-master";
 			psy-name = "bq2597x-standalone";
-			charging-curr-min = <1000000>;
+			charging-curr-min = <1500000>;
 		};
 	};
 };
