devonn: arm64/dts: Brinup 1st touch supplier icnl9922
- Bring in initial icnl9922 touch dts configuration.
- Add default buildid and configid.

Change-Id: Ia8b329eca6f9b1148831eecc5b71a48907baf947
Signed-off-by: Jun Weng <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2291238
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -119,7 +119,7 @@
 };
 /* GPS GPIO standardization end */
 
-#include "mediatek/cust_mt6855_touch_1080x2400.dtsi"
+//#include "mediatek/cust_mt6855_touch_1080x2400.dtsi"
 #include "mediatek/cust_mt6855_camera_v4l2.dtsi"
 
 &i2c6 {
@@ -147,6 +147,6 @@
 	cd-gpios = <&pio 14 GPIO_ACTIVE_HIGH>;
 	vmmc-supply = <&mt6369_vmch>;
 };
-
+#include "devonn-touch.dtsi"
 //#include <k6855v1_64/cust.dtsi>
 /*End of this file, DO NOT ADD ANYTHING HERE*/
