Vicky: add MACRO define for vicky project.
- add MACRO define for vicky project.

Change-Id: Ie96319c08f8fe279322ea980f3bb7ad7417fd706
Signed-off-by: huangsh4 <huangsh4@mt.com>
Reviewed-on: https://gerrit.mot.com/2293937
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <liuzy55@motorola.com>
Reviewed-by: <hansx3@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/cam_cal/Kconfig
+++ b/drivers/misc/mediatek/cam_cal/Kconfig
@@ -9,3 +9,9 @@ config MTK_CAM_CAL
 	  on ProjectConfig. The kernel space for EEPROM will be build.
 	  It may be like as "/dev/camera_eeprom0".
 	  User space code will control the driver by open and read this one.
+
+config MTK_VICKY_EEPROM_PROJECT
+	tristate "set imgsensor vicky eeprom name"
+	help
+	  This config is set as sensor eeprom name
+	  which project sensor used for.
