--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-vicky.config
@@ -76,3 +76,6 @@ CONFIG_SCSI_SKHID=y
 # CONFIG_DRM_PANEL_ALPHA_SAMSUNG_S6E3HAE_CMD_120HZ is not set
 
 CONFIG_HZ_300=y
+
+#Moto Vicky Camera eeprom
+CONFIG_MTK_VICKY_EEPROM_PROJECT=y
