--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -13,7 +13,7 @@
 #include "mediatek/mt6855-moto-common-overlay.dtsi"
 #include <dt-bindings/gpio/gpio.h>
 #include "mediatek/devonn-display.dtsi"
-
+#include "mediatek/devonn-charger.dtsi"
 
 
 &dispsys_config {
