--- a/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6855-devonn-common-overlay.dtsi
@@ -26,6 +26,168 @@
 	status = "okay";
 };
 
+&pio {
+
+	fingerfp_rst_high: fingerfp_rst_high {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
+			slew-rate = <1>;
+			output-high;
+		};
+	};
+
+	fingerfp_rst_low: fingerfp_rst_low {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
+			slew-rate = <1>;
+			output-low;
+		};
+	};
+
+	fingerfp_irq_active: fingerfp_irq_active {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO15__FUNC_GPIO15>;
+			slew-rate = <0>;
+			bias-disable;
+		};
+	};
+
+	fingerfp_spi_active: fingerfp_spi_active {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO68__FUNC_SPI1_MI>, <PINMUX_GPIO66__FUNC_SPI1_CSB>, <PINMUX_GPIO67__FUNC_SPI1_MO>, <PINMUX_GPIO65__FUNC_SPI1_CLK>;
+			drive-strength = <2>;
+		};
+	};
+
+	fingerfp_spi_default: fingerfp_spi_default {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO68__FUNC_GPIO68>, <PINMUX_GPIO66__FUNC_GPIO66>, <PINMUX_GPIO67__FUNC_GPIO67>, <PINMUX_GPIO65__FUNC_GPIO65>;
+			slew-rate = <1>;
+			output-low;
+		};
+	};
+	fps_irq: fps_irq {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO15__FUNC_GPIO15>;
+			slew-rate = <0>;
+			bias-disable;
+		};
+	};
+
+	fps_reset_high: fps_reset_high {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
+			slew-rate = <1>;
+			output-high;
+		};
+	};
+
+	fps_reset_low: fps_reset_low {
+		pins_cmd_dat {
+			pinmux = <PINMUX_GPIO157__FUNC_GPIO157>;
+			slew-rate = <1>;
+			output-low;
+		};
+	};
+};
+
+
+/* FINGERPRINT start */
+&spi1 {
+	status = "okay";
+	mediatek,pad-select = <0>, <1>;
+	tee-only;
+
+	fingerprint@0 {
+		compatible = "mediatek,fingerprint";
+		reg = <0>;
+		spi-max-frequency = <8000000>;
+		status = "okay";
+	};
+	fpc_tee@1 {
+		compatible = "fpc,fpc_spi";
+		reg = <1>;
+		fpc,enable-wakeup;
+		spi-max-frequency = <8000000>;
+		netlink-event = <31>;
+		status = "okay";
+	};
+};
+
+&odm {
+	fp_egistec {
+		compatible = "fp-egistec";
+		interrupt-parent = <&pio>;
+		interrupts = <15 IRQ_TYPE_EDGE_RISING 15 0>;
+
+		fp-ctrl-power;
+
+		egistec,gpio_reset = <&pio 157 0x0>;
+		egistec,gpio_irq = <&pio 15 0x0>;
+
+		vcc_fp-supply = <&mt6369_vfp>;	// ldo for support module vcc
+		egis-fp,vcc-voltage = <3300000 3300000>;	// ldo voltage default 3.3V
+		egis-fp,vcc-current = <100000>;
+
+		pinctrl-names = "egis_rst_high", "egis_rst_low", "egis_irq_active", "egis_spi_active", "egis_spi_default";
+		pinctrl-0 = <&fingerfp_rst_high>;
+		pinctrl-1 = <&fingerfp_rst_low>;
+		pinctrl-2 = <&fingerfp_irq_active>;
+		pinctrl-3 = <&fingerfp_spi_active>;
+		pinctrl-4 = <&fingerfp_spi_default>;
+
+		status="okay";
+	};
+
+	fingerprint_int: fingerprint_int {
+		compatible = "mediatek,fingerprint-fpc";
+		fpc,enable-wakeup;
+		interrupt-parent = <&pio>;
+		interrupts = <15 IRQ_TYPE_EDGE_RISING 15 0>;
+		pinctrl-names = "fingerprint_irq", "fingerprint_reset_high", "fingerprint_reset_low";
+		pinctrl-0 = <&fps_irq>;
+		pinctrl-1 = <&fps_reset_high>;
+		pinctrl-2 = <&fps_reset_low>;
+		fpc,rst= <&pio 157 0>;
+		fpc,irq = <&pio 15 0>;
+		status = "okay";
+	};
+};
+
+&regulator_vibrator {
+	status = "disabled";
+};
+
+&i2c3 {
+	haptic_nv@5A{
+		compatible = "awinic,haptic_nv";
+		reg = < 0x5A >;
+		aw862xx_i2c_addr = < 0x58 >;
+		reset-gpio = <&pio 12 0>;
+		aw8622x_vib_lk_f0_cali = < 0 >;
+		aw8622x_vib_mode = < 2 >; /* mode: RAM -> 2; CONT -> 3 */
+		aw8622x_vib_f0_pre = < 2350 >;
+		aw8622x_vib_f0_cali_percen = < 7 >;
+		aw8622x_vib_cont_drv1_lvl = < 0x7F >;
+		aw8622x_vib_lra_vrms = < 1000 >; /* Motor rated voltage, mV */
+		aw8622x_vib_cont_brk_time = < 0x06 >;
+		aw8622x_vib_cont_tset = < 0x06 >;
+		aw8622x_vib_cont_bemf_set = < 0x02 >;
+		aw8622x_vib_cont_wait_num = < 0x06 >;
+		aw8622x_vib_cont_brk_gain = < 0x08 >;
+		aw8622x_vib_cont_drv1_time = < 0x04 >;
+		aw8622x_vib_cont_drv2_time = < 0x14 >;
+		aw8622x_vib_cont_track_margin = < 0x0F >;
+		aw8622x_vib_sine_array = < 0x05 0xB2 0xFF 0xEF >; /* SIN_H SIN_L COS_H COS_L */
+		aw8622x_vib_d2s_gain = < 0x05 >;
+		aw8622x_vib_trig_config = < 0 0 0 1 0 2 0
+					    0 0 0 1 0 2 0
+					    0 0 0 1 0 2 0 >;
+		aw8622x_vib_duration_time = < 34 67 100 >;
+		status = "okay";
+	};
+};
+
 /* GPS GPIO standardization start */
 &pio {
 	gps_pins_default: gps_default {
@@ -66,39 +228,7 @@
 	};
 };
 
-&regulator_vibrator {
-	status = "disabled";
-};
 
-&i2c3 {
-	haptic_nv@5A{
-		compatible = "awinic,haptic_nv";
-		reg = < 0x5A >;
-		aw862xx_i2c_addr = < 0x58 >;
-		reset-gpio = <&pio 12 0>;
-		aw8622x_vib_lk_f0_cali = < 0 >;
-		aw8622x_vib_mode = < 2 >; /* mode: RAM -> 2; CONT -> 3 */
-		aw8622x_vib_f0_pre = < 2350 >;
-		aw8622x_vib_f0_cali_percen = < 7 >;
-		aw8622x_vib_cont_drv1_lvl = < 0x7F >;
-		aw8622x_vib_lra_vrms = < 1000 >; /* Motor rated voltage, mV */
-		aw8622x_vib_cont_brk_time = < 0x06 >;
-		aw8622x_vib_cont_tset = < 0x06 >;
-		aw8622x_vib_cont_bemf_set = < 0x02 >;
-		aw8622x_vib_cont_wait_num = < 0x06 >;
-		aw8622x_vib_cont_brk_gain = < 0x08 >;
-		aw8622x_vib_cont_drv1_time = < 0x04 >;
-		aw8622x_vib_cont_drv2_time = < 0x14 >;
-		aw8622x_vib_cont_track_margin = < 0x0F >;
-		aw8622x_vib_sine_array = < 0x05 0xB2 0xFF 0xEF >; /* SIN_H SIN_L COS_H COS_L */
-		aw8622x_vib_d2s_gain = < 0x05 >;
-		aw8622x_vib_trig_config = < 0 0 0 1 0 2 0
-					    0 0 0 1 0 2 0
-					    0 0 0 1 0 2 0 >;
-		aw8622x_vib_duration_time = < 34 67 100 >;
-		status = "okay";
-	};
-};
 
 &gps {
 	pinctrl-names = "default",
